--- a/sass/layot/_clients.scss
+++ b/sass/layot/_clients.scss
@@ -2,12 +2,6 @@
     padding-top: 60px;
     padding-bottom: 60px;
 }
-@media screen and (min-width: 1200px) {
-    .our-clients {
-        padding-top: 94px;
-        padding-bottom: 94px;
-    }
-}
 
 .clients {
     display: flex;
@@ -16,24 +10,11 @@
     margin-top: -30px;
 }
 
-.clients__about {
-    flex-basis: calc((100% - 2*30px)/2);
+.clients__about{
+    flex-basis: calc((100% - 1*30px)/1);
     margin-left: 30px;
     margin-top: 30px;
-    width: 210px;
     height: 92px;
-}
-@media screen and (min-width: 738px) {
-    .clients__about {
-        flex-basis: calc((100% - 3*30px)/3);
-        width: 226px;
-    }
-}
-@media screen and (min-width: 1200px) {
-    .clients__about {
-        flex-basis: calc((100% - 6*30px)/6);
-        width: 170px;
-    }
 }
 
 .clients__wrapper {
@@ -59,3 +40,30 @@
     }
 }
 
+// 480px - 767px
+@media screen and (min-width: 480px) {
+    .clients__about {
+        flex-basis: calc((100% - 2*30px)/2);
+        width: 210px;
+    }
+}
+
+// 768px - 1199px
+@media screen and (min-width: 768px) {
+    .clients__about {
+        flex-basis: calc((100% - 3*30px)/3);
+        width: 226px;
+    }
+}
+
+// 1200px +
+@media screen and (min-width: 1200px) {
+    .our-clients {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
+    .clients__about {
+        flex-basis: calc((100% - 6*30px)/6);
+        width: 170px;
+    }
+}
