--- a/sass/layot/_project-gallery.scss
+++ b/sass/layot/_project-gallery.scss
@@ -2,43 +2,24 @@
     padding-top: 60px;
     padding-bottom: 60px;
 }
-@media screen and (min-width: 1200px) {
-    .project {
-    padding-top: 94px;
-    padding-bottom: 94px;
-    }
-}
 
 .project-items-list {
     display: flex;
     flex-wrap: wrap;
 
 }
-@media screen and (min-width: 768px) {
-    .project-items-list {
-    margin-left: -30px;
-    margin-top: -30px;
-    }
-}
 
 .project-list-items {
     border-bottom: var(--secondary-text-color-teme-light);
 }
-@media screen and (min-width: 768px) {
-    .project-list-items {
-        flex-basis: calc((100% - 2*30px)/2);
-        margin-left: 30px;
-        margin-top: 30px;        
-    }
-}
-@media screen and (min-width: 1200px) {
-    .project-list-items {
-        flex-basis: calc((100% - 4*30px)/4);
-    }
+
+.project-list-items{
+    margin-top: 30px;
 }
 
 .project-list {
-    display: block;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
 
@@ -70,6 +51,7 @@
     width: 100%;
     height: 100%;
 
+    z-index: 1;
     background-color: rgba(33, 150, 243, 0.9);
     transform: translateY(100%);
 
@@ -81,8 +63,8 @@
 
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
-    line-height: 1.56;
+    font-size: 14px;
+    line-height: 1.2;
     letter-spacing: 0.03em;
     color: var(--primery-text-color-teme-dark);
 }
@@ -109,4 +91,42 @@
     line-height: 1.87;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color-teme-dark);
+}
+
+// 480px - 767px
+@media screen and (min-width: 480px) {
+    .project-text {
+        font-size: 18px;
+        line-height: 1.56;
+    }
+}
+
+// 768px - 1199px
+@media screen and (min-width: 768px) {
+    .project-items-list {
+        margin-left: -30px;
+        margin-top: -30px;
+    }
+    .project-list-items {
+        flex-basis: calc((100% - 2*30px)/2);
+        margin-left: 30px;
+        margin-top: 30px;
+    }
+}
+// При a.project-list (display: flex;) выравнивает нижную границу по уровню с остальными блоками
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .project-list-text {
+        flex-grow: 1;
+    }
+}
+
+// 1200px +
+@media screen and (min-width: 1200px) {
+    .project {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
+    .project-list-items {
+        flex-basis: calc((100% - 3*30px)/3);
+    }
 }
