--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,7 +7,7 @@
     --secondary-text-color-teme-dark: #757575;
     --third-text-color-teme-dark: #afb1b8;
     --accent-color: #2196F3;
-    --via-magenta: #FF0090;
+    --via-magenta: #FF0090; // нет в макете, для выделения
     --background-color-teme-dark: #2F303A;
     --background-color-teme-light: #F5F4FA;
 }
